<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SevenActivity">

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:padding="10dp"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-7358222990708386/6585237145">
    </com.google.android.gms.ads.AdView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Java Classes and Objects:-"
                android:textSize="28sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:textColor="@color/textColor_1"/>

            <TextView
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/Classes"/>

            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adViews"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:padding="10dp"
                ads:adSize="SMART_BANNER"
                ads:adUnitId="ca-app-pub-7358222990708386/2837563821">
            </com.google.android.gms.ads.AdView>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Class in Java in Hindi:-"
                android:textSize="28sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:textColor="#aa0000"/>

            <TextView
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/Class"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Object in Java in Hindi:-"
                android:textSize="28sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:textColor="#aa0000"/>

            <TextView
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/object"/>


        </LinearLayout>
    </ScrollView>

</LinearLayout>