<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TenActivity">

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:padding="10dp"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-7358222990708386/5677040651">
    </com.google.android.gms.ads.AdView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Java - Data Encapsulation:-"
                android:textSize="28sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:textColor="@color/textColor_1"/>

            <TextView
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/encapsulation"/>

            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adViews"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:padding="10dp"
                ads:adSize="LARGE_BANNER"
                ads:adUnitId="ca-app-pub-7358222990708386/1929367334">
            </com.google.android.gms.ads.AdView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Data Encapsulation के फायदे:-"
                android:textSize="28sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:textColor="@color/textColor_1"/>

            <TextView
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/encapProfit"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Java Interfaces:-"
                android:textSize="28sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:textColor="@color/textColor_1"/>

            <TextView
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/interfaces"/>


        </LinearLayout>
    </ScrollView>

</LinearLayout>